--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <div class="wrapper">
     <header>
         <div class="logo"><img src="images/logo.svg"></div>
-        <nav class="main-menu"></nav>
-        <ul>
+      <nav>
+        <ul class="main-menu">
+            <li class="menu-item"><a href="#">Recipes</a></li>
+            <li class="menu-item"><a href="#">Recipes</a></li>
+            <li class="menu-item"><a href="#">Recipes</a></li>
             <li class="menu-item"><a href="#">Recipes</a></li>
         </ul>
-        <nav class="socials">
-            <ul>
+      </nav>
+
+        <nav>
+            <ul class="socials">
                 <li class="social-item"><a href="#">facebook</a></li>
             </ul>
         </nav>
@@ -27,19 +32,45 @@
         <div class="recepten">
             <div class="recept">
                 <div class="description">
-                    <h2>titel</h2>
-                    <h4>datum</h4>
+                    <h2>Asperagus Season: Fresh from the field to the table</h2>
+                    <h4>Oktober 2021</h4>
                     <p>tekst</p>
                     <button>read more</button>
                 </div>
-                <div class="image"></div>
+                <div class="recept-image"><img src="images/aspergers.png"</div>
             </div>
         </div>
         <div class="recept-items">
-            <div class="item">
+             <div class="item">
+                <div class="item-text"></div>
                 <h3>titel</h3>
                 <a href="#">link</a>
-                <img src="">
+             </div>
+             <img src="images/item-1.png">
+             <div class="item">
+                <div class="item-text"></div>
+                <h3>titel</h3>
+                <a href="#">link</a>
+             </div>
+             <img src="images/item-2.png">
+             <div class="item">
+                <div class="item-text"></div>
+                <h3>titel</h3>
+                <a href="#">link</a>
+             </div>
+             <img src="images/item-3.png">
+             <div class="item">
+                <div class="item-text"></div>
+                <h3>titel</h3>
+                <a href="#">link</a>
+             </div>
+             <img src="images/item-4.png">  <div class="item">
+                <div class="item-text"></div>
+                <h3>titel</h3>
+                <a href="#">link</a>
+             </div>
+             <img src="images/item-5.png">
+                
             </div>
         </div>
 
